[project]
name = "dnf-humbug"
version = "0.0.3"
dependencies = [
    "textual",
]
license = {text = "GPL-2.0-or-later"}
readme = "README.md"

[project.scripts]
dnf-humbug = "dnf_humbug.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dnf_humbug"]
