[project]
name = "dnf-humbug"
version = "0.0.12"
dependencies = [
    "textual==0.20.1",
]
description = "List and sort user-installed files according to dnf"
license = {text = "GPL-2.0-or-later"}
readme = "README.md"

[project.scripts]
dnf-humbug = "dnf_humbug.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dnf_humbug"]
